working on creating post

--- a/PositionIn/NewItems/NewItems.storyboard
+++ b/PositionIn/NewItems/NewItems.storyboard
@@ -241,6 +241,14 @@
             </objects>
             <point key="canvasLocation" x="769" y="1024"/>
         </scene>
+        <!--Post To Container View Controller-->
+        <scene sceneID="Qoj-Az-xGj">
+            <objects>
+                <viewController storyboardIdentifier="PostToContainerViewControllerId" id="YRP-v6-Ctt" customClass="PostToContainerViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L5d-3u-Nab" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1411" y="1034"/>
+        </scene>
         <!--New Emergency-->
         <scene sceneID="a6q-c8-Teh">
             <objects>
